--- a/juanpi2/package.json
+++ b/juanpi2/package.json
@@ -1,15 +1,25 @@
 {
-  "name": "hh",
+  "name": "example",
   "version": "1.0.0",
-  "description": "示例代码",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
-  "dependencies": {
-    "body-parser": "^1.15.2",
+  "devDependencies": {
+  	"angular": "^1.6.1",
+  	"bootstrap": "^3.3.7",
+    "gulp": "^3.9.1",
+    "gulp-imagemin": "^3.1.1",
+    "gulp-livereload": "^3.8.1",
+    "gulp-ruby-sass": "^2.1.1",
+    "gulp-uglify": "^2.0.0",
+    "gulp-webserver": "^0.9.1",
+    "imagemin-pngquant": "^5.0.0"
+  },
+   "dependencies": {
     "express": "^4.14.0"
   }
 }
